--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div>
-        <h1>Welcome to ByePai house</h1>
+        <h1>Welcome to Anpanman house</h1>
         <img src="http://www.anpanman.tw/images/file/data6/55dffc9e90c2d.png">
         <p>
-            Thank you </br>
+            Thank you !</br>
             <b>works!</b>
         </p>
     </div>
