--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>index</title>
 </head>
 <body>
-<a href="journal.jtml">20160422 homework 1 - My blog
+<a href="journal.html">20160422 homework 1 - My blog
 </body>
 </html>
