--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <a href="../journal/journal.html">20160422 homework 1 - My blog
+        <a href="../1/journal.html">20160422 homework 1 - My blog
         </a>
     </body>
 
