--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
 
     <body>
-        <a href="journal/journal.html">20160422 homework 1 - My blog
+        <a href="journal/journal.html">20160422 homework 1 - journal
+        </a>
+        <a href="lounge/lounge.html">20160422 homework 1 - lounge
         </a>
     </body>
 
