--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </head>
 
     <body>
-        <p>123
+        <p>
+        <h1>Bye homework</h1>
         <a href="journal/journal.html">20160422 homework 1 - journal
         </a>
         </p>
