--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <body>
         <h1>Bye homework</h1>
         <p>
+            <a href="fistwork/fistwork.html">20160419 homework 1 - fist homework
+        </a>
+        <p>
             <a href="journal/journal.html">20160422 homework 1 - journal
         </a>
         </p>
