--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 <body>
     <h1>Bye homework</h1>
     <a href="fistwork/fistwork.html">20160419 homework 1 - fist homework
-        </a><br>
+        </a>
+    <br>
     <a href="journal/journal.html">20160422 homework 1 - journal
-        </a><br>
+        </a>
+    <br>
     <a href="lounge/lounge.html">20160422 homework 2 - lounge
-        </a><br>
+        </a>
+    <br>
+    <a href="delicious/delicious.html">20160422 homework 3 - Deadly Delicious
+        </a>
+    <br>
 </body>
 
 </html>
