--- a/delicious/delicious.html
+++ b/delicious/delicious.html
@@ -8,9 +8,10 @@
 
 <body>
     <h1>MGF JR.PASTA 麵工坊義大利麵</h1>
-    <P>MGF JR.PASTA的地理位子相當方便，走出捷運七張站的1號出口後，右手邊直直走，不到五分鐘就抵達目的地了!</P>
-    <img src="images/MGF JR PASTA.jpg" alt="MGF JR PASTA" width="60%">
+MGF JR.PASTA的地理位子相當方便，走出捷運七張站的1號出口後，右手邊直直走，不到五分鐘就抵達目的地了!
     <h2>2016.12.18</h2>
+    <img src="images/MGF JR PASTA.jpg" alt="MGF JR PASTA" width="60%">
+    
     <P>總共有三層半，全部的座位大約只有30個左右,柔合的燈光跟到處都有的小飾品，除了坐位比較擠之外，整家店給人一種歐式居家的舒服感。</P>
     <img src="images/space.jpg" alt="space" width="60%">
     <h3>MENU</h3>
@@ -26,7 +27,7 @@
     <P>7小時海鮮蕃茄是蕃茄加入數十種香料熬煮7小時以上的Sauce紅醬，所以番茄味道很純濃鮮甜，堪稱店內人氣美食，讓人一口接一口停不下來。
     </P>
     <img src="images/Tomato Seafood.jpg" alt="Tomato Seafood" width="60%">
-    <h3>巧克力蛋糕</h3>
+    <h3>Dessert - 巧克力蛋糕</h3>
     <p>
         甜點上桌的時候啦， 用湯匙輕輕一挖，眼睛突然為之一亮，原來蛋糕裡頭暗藏巧克力醬！
         <br> 蛋糕最終抑制不住巧克力醬的潰堤，只好任它向外傾倒，一整個非常濃稠的FU，吃了一口發現是溫熱的，實在太好吃啦！！
