--- a/index.html
+++ b/index.html
@@ -3,23 +3,59 @@
 
 <head>
     <meta charset="utf-8">
-    <title>index</title>
+    <title>Bye Pai ｜ HTML 265 </title>
 </head>
 
 <body>
-    <h1>Bye homework</h1>
-    <a href="fistwork/fistwork.html">20160419 homework 1 - fist homework
+    <img src="image/HTM.jpg" width="40%">
+    <p>
+        <table width="600" border=".5" cellpadding="8" cellspacing="5">
+            <tr>
+                <th colspan="3">
+                    <h3>NTU HTML 265 課堂練習</h3>
+                </th>
+            </tr>
+            <tr>
+                <th>week</th>
+                <th>date</th>
+                <th>homework</th>
+            </tr>
+            <tr>
+                <th rowspan="3">week 1-1</th>
+                <td rowspan="3">20160422</td>
+                <td>
+                    <a href="journal/journal.html">Journal
         </a>
-    <br>
-    <a href="journal/journal.html">20160422 homework 1 - journal
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="journal/journal.html">Lounge
         </a>
-    <br>
-    <a href="lounge/lounge.html">20160422 homework 2 - lounge
+                </td>
+            </tr>
+            <td>
+                <a href="journal/mypod-begin.html">My pod
         </a>
-    <br>
-    <a href="delicious/delicious.html">20160422 homework 3 - Deadly Delicious
+            </td>
+            </tr>
+            <tr>
+                <th>week 1-2</th>
+                <td>20160422</td>
+                <td>
+                    <a href="delicious/delicious.html">Deadly Delicious
         </a>
-    <br>
+                </td>
+            </tr>
+
+
+            <tr>
+                <th>week 2</th>   
+                <td>20160426</td>
+                <td>
+                    <a href="table/table.html">Table Exercise
+        </a>
+                </td>
 </body>
 
 </html>
