--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="journal/lounge.html">Lounge
+                    <a href="lounge/lounge.html">Lounge
         </a>
                 </td>
             </tr>
