--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </td>
             </tr>
             <td>
-                <a href="mypod-begin/mypod-begin.html">My pod
+                <a href="mypod-begin/mypod.html">My pod
         </a>
             </td>
             </tr>
