--- a/journal/journal.html
+++ b/journal/journal.html
@@ -47,7 +47,7 @@
         Just the essentials. As Lao Tzu would have said,
         <q>A journey of a thousand miles begins with one Segway.</q>
     </p>
-    <a href="index.html">
+    <a href="../index.html">
     <img src="../image/back.jpg">
 </body>
 
