--- a/lounge/lounge.html
+++ b/lounge/lounge.html
@@ -21,7 +21,8 @@
 <a href="about/directions.html">detailed directions.</a>
          Come join us!
     </p>
-    
+    <a href="../index.html">
+    <img src="../image/back.jpg">
 </body>
 
 </html>
