--- a/mypod-begin/mypod.html
+++ b/mypod-begin/mypod.html
@@ -32,6 +32,8 @@
             <img src="thumbnails/seattle_downtown.jpg" alt="">
         </a>
     </p>
+    <a href="../index.html">
+    <img src="../image/back.jpg">
 </body>
 
 </html>
