--- a/mypod-begin/mypod.html
+++ b/mypod-begin/mypod.html
@@ -33,7 +33,7 @@
         </a>
     </p>
     <a href="../index.html">
-    <img src="../image/back.jpg">
+    <img src="../image/back.png">
 </body>
 
 </html>
