--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="image/HTM.jpg" width="40%">
+    <img src="image/HTM.jpg" width="600px">
     <p>
         <table width="600" border=".5" cellpadding="8" cellspacing="5">
             <tr>
