--- a/journal2/journal2.html
+++ b/journal2/journal2.html
@@ -6,6 +6,7 @@
     <title>My Trip Around the USA on a Segway</title>
   
     <link rel="stylesheet" type="text/css" href="journal2.css">
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
