--- a/delicious/delicious.html
+++ b/delicious/delicious.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Deadly Delicious</title>
+    <script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-41947.js"></script>
+    <link rel="stylesheet" type="text/css" href="delicious.css">
 </head>
 
 <body>
