--- a/delicious/delicious.html
+++ b/delicious/delicious.html
@@ -7,7 +7,7 @@
    
     <style type="text/css">
     h1 {
-        font-family: setofont,
+        font-family: "setofont",
     }
     </style>
 </head>
