--- a/delicious/delicious.html
+++ b/delicious/delicious.html
@@ -6,7 +6,7 @@
     <title>Deadly Delicious</title>
    
     <style type="text/css">
-    h1 {
+   body {
         font-family: "setofont",
     }
     </style>
