--- a/delicious/delicious.html
+++ b/delicious/delicious.html
@@ -6,8 +6,9 @@
     <title>Deadly Delicious</title>
    
     <style type="text/css">
-   body {
-        font-family: "setofont",
+   h1 {
+        font-family: "setofont";
+        font-weight: "600" ;
     }
     </style>
 </head>
