--- a/journal/journal.html
+++ b/journal/journal.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>My Trip Around the USA on a Segway</title>
+  
+    <link rel="stylesheet" type="text/css" href="journal2.css">
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
