--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>
         <table width="600" border=".5" cellpadding="8" cellspacing="5">
             <tr>
-                <th colspan="3">
+                <th colspan="4">
                     <h3>NTU HTML 265 課堂練習</h3>
                 </th>
             </tr>
@@ -19,10 +19,12 @@
                 <th>week</th>
                 <th>date</th>
                 <th>homework</th>
+                <th>link</th>
             </tr>
             <tr>
                 <th rowspan="3">week 1-1</th>
                 <td rowspan="3">20160422</td>
+                <td rowspan="3">HTML</td>
                 <td>
                     <a href="journal/journal.html">Journal
         </a>
@@ -40,8 +42,9 @@
             </td>
             </tr>
             <tr>
-                <th>week 1-2</th>
+                <th>week 1-2 </th>
                 <td>20160422</td>
+                <td>HTML</td>
                 <td>
                     <a href="delicious/delicious.html">Deadly Delicious
         </a>
@@ -50,12 +53,24 @@
 
 
             <tr>
-                <th>week 2</th>   
+                <th>week 2-1</th>   
                 <td>20160426</td>
+                <td>HTML Table</td>
                 <td>
                     <a href="table/table.html">Table Exercise
         </a>
                 </td>
+                </tr>
+
+                     <tr>
+                <th>week 2-2</th>   
+                <td>20160429</td>
+                <td>CSS</td>
+                <td>
+                    <a href="elixir 3.html">CSS_Practice
+        </a>
+                </td>
+                </tr>
 </body>
 
 </html>
