--- a/CSS_PRACTICE/elixir 3.html
+++ b/CSS_PRACTICE/elixir 3.html
@@ -4,6 +4,7 @@
     <title>Head First Lounge Elixirs</title>
 
 <link rel="stylesheet" type="text/css" href="elixir 3.css">
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
 </head>
 
