--- a/CSS_PRACTICE/elixir 3.html
+++ b/CSS_PRACTICE/elixir 3.html
@@ -28,6 +28,8 @@
     <p class="red">
         <img src="red.jpg"> Wake up to the flavors of cranberry and hibiscus in this vitamin C rich elixir.
     </p>
+    <a href="../index.html">
+    <img src="../image/back.jpg">
 </body>
 
 </html>
