--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <tr>
                 <th>week</th>
                 <th>date</th>
+                <th>theme</th>
                 <th>homework</th>
-                <th>link</th>
             </tr>
             <tr>
                 <th rowspan="3">week 1-1</th>
