--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <td>20160429</td>
                 <td>CSS</td>
                 <td>
-                    <a href="CSS/elixir3.html">CSS_Practice
+                    <a href="CSS_prcatice/elixir3.html">CSS_Practice
         </a>
                 </td>
                 </tr>
