--- a/index.html
+++ b/index.html
@@ -50,27 +50,42 @@
         </a>
                 </td>
             </tr>
-
-
             <tr>
-                <th>week 2-1</th>   
+                <th>week 2-1</th>
                 <td>20160426</td>
                 <td>HTML Table</td>
                 <td>
                     <a href="table/table.html">Table Exercise
         </a>
                 </td>
-                </tr>
-
-                     <tr>
-                <th>week 2-2</th>   
+            </tr>
+            <tr>
+                <th>week 2-2</th>
                 <td>20160429</td>
                 <td>CSS</td>
                 <td>
                     <a href="CSS_prcatice/elixir3.html">CSS_Practice
         </a>
                 </td>
-                </tr>
+            </tr>
+            <tr>
+                <th>week 2-2</th>
+                <td>20160429</td>
+                <td>CSS</td>
+                <td>
+                    <a href="CSS_prcatice/elixir3.html">CSS_Practice
+        </a>
+                </td>
+            </tr>
+            <tr>
+                <th>week 3-1</th>
+                <td>20160503</td>
+                <td>box model</td>
+                <td>
+                    <a href="lounge_basic/lounge.html">box model
+        </a>
+                </td>
+            </tr>
 </body>
 
 </html>
