--- a/index.html
+++ b/index.html
@@ -78,11 +78,17 @@
                 </td>
             </tr>
             <tr>
-                <th>week 3-1</th>
-                <td>20160503</td>
-                <td>box model</td>
+                <th rowspan="2">week 3-1</th>
+                <td rowspan="2">20160503</td>
+                <td rowspan="2">CSS 排版</td>
                 <td>
                     <a href="lounge_basic/lounge.html">box model
+        </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="lounge_basic/lounge.html">pikachu_begin
         </a>
                 </td>
             </tr>
