--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <tr>
                 <th>week 1-2 </th>
                 <td>20160422</td>
-                <td>HTML</td>
+                <td>HTML basic</td>
                 <td>
                     <a href="delicious/delicious.html">Deadly Delicious
         </a>
@@ -62,7 +62,7 @@
             <tr>
                 <th>week 2-2</th>
                 <td>20160429</td>
-                <td>CSS</td>
+                <td>CSS 外觀</td>
                 <td>
                     <a href="CSS_prcatice/elixir3.html">CSS_Practice
         </a>
