--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <tr>
                 <th rowspan="3">week 1-1</th>
                 <td rowspan="3">20160422</td>
-                <td rowspan="3">HTML</td>
+                <td rowspan="3">HTML basic</td>
                 <td>
                     <a href="journal/journal.html">Journal
         </a>
@@ -44,7 +44,7 @@
             <tr>
                 <th>week 1-2 </th>
                 <td>20160422</td>
-                <td>HTML basic</td>
+                <td>HTML 應用</td>
                 <td>
                     <a href="delicious/delicious.html">Deadly Delicious
         </a>
