--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <td rowspan="2">20160503</td>
                 <td rowspan="2">CSS 排版</td>
                 <td>
-                    <a href="lounge_basic/lounge.html">box model
+                    <a href="mypod-begin/lounge.html">box model
         </a>
                 </td>
             </tr>
