--- a/box-model/lounge.html
+++ b/box-model/lounge.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Welcome to the "fat"</h1>
+    <h1>Welcome to the "脂肪"</h1>
     <img src="images/drinks.gif" alt="drinks.gif">
     <p class="aquamarine">
         Join us any evening for refreshing <a href="beverages/elixir.html">elixirs</a> conversation and maybe a game or two of
