--- a/box-model/lounge.html
+++ b/box-model/lounge.html
@@ -16,6 +16,8 @@
     <p>
         You'll find us right in the center of downtown Webville. If you need help finding us, check out our detailed directions. Come join us!
     </p>
+     <a href="../index.html">
+    <img src="../image/back.jpg">
 </body>
 
 </html>
