--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="lounge_basic/lounge.html">pikachu_begin
+                    <a href="pikachu_begin/position.html">Pikachu
         </a>
                 </td>
             </tr>
