--- a/pikachu_begin/position.html
+++ b/pikachu_begin/position.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="wrap">
+    <div class="bg">
         <div class="circle1">
             <img src="image/flash.png" width="120">
             <h1 class="title">
@@ -59,9 +59,9 @@
             <img src="image/pika2.jpg" width="130">
         </div>
         <div class="circle5">
-            <p>follow me</p>
-            <a href="https://www.facebook.com/pages/%E7%9A%AE%E5%8D%A1%E4%B8%98/104031079632855?fref=ts">
-                <img src="image/fb.png" width="30"></a>
+            <p>BacK to </p>
+            <a href="http://bye7733.github.io">
+                <img src="image/bye index.png" width="80"></a>
         </div>
         <div class="circle6">© 2023 by Pikachu. 
         <br> Proudly created by 
